Fixes for the playa and venue chat - https://trello.com/c/M4QW5YVS 1. Show author and time of the message above the bubble next to profile pic 2. Long bubble text are displayed on multiple lines, and shared URL are broken to not bust out of the container 3. Restyled chat scrolling bar

--- a/src/components/organisms/ChatDrawer/ChatDrawer.scss
+++ b/src/components/organisms/ChatDrawer/ChatDrawer.scss
@@ -51,4 +51,21 @@
     color: $primaryColor;
     font-size: 30px;
   }
+
+  .band-reaction-container {
+    &::-webkit-scrollbar-track {
+      border-radius: 3px;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: rgba($white, 0);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background-color: rgba($white, 0.4);
+    }
+  }
 }
